# vj-gen-system

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DEVELOPMENT_PLAN.md  PROGRESS_REPORT.md  README.md  audio_analysis_module.py  audio_madmom.py  integrate.js  pyproject.toml  requirements.txt  start.sh  visual_mapper.py  vj_mapper.py
api/: __init__.py  main.py
audio-analyzer/: ANALYSIS_SUMMARY.md  RESEARCH.md  VERSION.md  compare_methods.py  editor-integration.js  full_compare.py  index.html  learner.py  run_all.sh  section_detector.py  server.py  v1-smart-cursor.html
audio-server/: README.md  run.sh
audio-server/learning/: feedback.json
audio-web/: app.py  start.sh  start_tunnel.sh
audio-web/templates/: index.html
config/: models.yaml  routing.yaml
dashboard/: index.html
demos/: api-test.html  image-gen-api.js  image-gen.js  index.html  miniMax-image-gen.js  phase1-test.html  prototype-full.html  prototype-v2.html  v3-lovart.html  v3-prototype.html  v3-superdesign.html  v4-tapnow-editor-debug.html  v4-tapnow-editor-fixed.html  v4-tapnow-editor.html  v4-tapnow-editor.html.bak
docs/: API.md  CLAUDE-CODE-SOURCE-ANALYSIS.md  VJ-GEN-V4-DESIGN.md
examples/: audio_analysis_demo.py  lyric_analysis_demo.py  multi_aspect_demo.py  timeline_demo.py  video_generation_demo.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
src/adapters/: base.py
src/core/: __init__.py  beat_sync.py  router.py  timeline.py  (+1 more)
test_web/: full.html  server.py  timeline.html
tests/: test_adapters.py  test_audio_pipeline.py  test_lyric_pipeline.py  test_multi_aspect.py  test_schemas.py  test_timeline.py  test_video_pipeline.py
(+48 files in other folders)
